--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "@tailwindcss/postcss": "^4",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "iron-session": "^8.0.4",
@@ -32,11 +33,11 @@
     "next": "15.4.6",
     "prisma": "^6.14.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwindcss": "^4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
@@ -46,7 +47,6 @@
     "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
     "tsx": "^4.20.4",
     "typescript": "^5"
   }
