--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "iron-session": "^8.0.4",
@@ -34,20 +37,17 @@
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "tsx": "^4.20.4",
-    "typescript": "^5"
+    "tsx": "^4.20.4"
   }
 }
