--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "lightningcss": "^1.30.2",
     "lucide-react": "^0.545.0",
     "next": "15.4.6",
     "pdfkit": "^0.17.2",
